[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplantsim"
version = "0.4.6"
description = "A Python wrapper for Siemens Tecnomatix Plant Simulation COM Interface"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Luca Bernstiel", email = "bernstiel@gmx.de"},
]
keywords = ["plant", "siemens", "simulation", "COM"]
dependencies = [
    "loguru",
    "pywin32; platform_system=='Windows'",
    "win32_setctime; platform_system=='Windows'",
    "pandas",
    "psutil",
    "plantsimpath @ git+https://github.com/malun22/plantsimpath@python-to-311",
    "packaging"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-pywin32",
    "pandas-stubs",
    "types-psutil",
    "loguru",
    "plantsimpath",
    "packaging",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/malun22/pyplantsim"
Documentation = "https://malun22.github.io/pyplantsim/"
Repository = "https://github.com/malun22/pyplantsim"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyplantsim*"]

[tool.setuptools.package-data]
pyplantsim = ["py.typed", "sim_talk_scripts/*.st"]