[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplantsim"
version = "0.4.9"
description = "A Python wrapper for Siemens Tecnomatix Plant Simulation COM Interface"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Luca Bernstiel", email = "bernstiel@gmx.de"},
]
keywords = ["plant", "siemens", "simulation", "COM"]
dependencies = [
    "pywin32; platform_system=='Windows'",
    "win32_setctime; platform_system=='Windows'",
    "pandas",
    "psutil",
    "plantsimpath",
    "packaging"
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "build",
    "pre-commit",
    "mypy",
    "ruff",
    "types-pywin32",
    "pandas-stubs",
    "types-psutil",
    "packaging",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/malun22/pyplantsim"
Documentation = "https://malun22.github.io/pyplantsim/"
Repository = "https://github.com/malun22/pyplantsim"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyplantsim*"]

[tool.setuptools.package-data]
pyplantsim = ["py.typed", "sim_talk_scripts/*.st"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]

[tool.ruff.lint.isort]
known-first-party = ["optuna", "tests", "docs"]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false